--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "bertopic>=0.17.3",
+    "datetime>=5.5",
+    "nltk>=3.9.1",
     "pandas>=2.3.1",
+    "praw>=7.8.1",
 ]
