--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,13 @@ requires-python = ">=3.13"
 dependencies = [
     "bertopic>=0.17.3",
     "datetime>=5.5",
+    "ipykernel>=6.30.0",
     "nltk>=3.9.1",
+    "notebook>=7.4.4",
     "pandas>=2.3.1",
+    "pathlib>=1.0.1",
     "praw>=7.8.1",
     "psaw>=0.1.0",
     "python-dotenv>=1.1.1",
+    "zstandard>=0.23.0",
 ]
